[package]
name = "video-chat"
version = "0.1.0"
authors = ["sakex <alexandre@senges.ch>"]
edition = "2018"
description = "WASM Video Chat"
repository = "https://github.com/sakex/asm-video-chat"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.37"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.10"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Element',
  'Window',
  'console',
  'Navigator',
  'MediaDevices',
  'AudioContext',
  'AudioDestinationNode',
  'MediaStreamConstraints',
  'MediaStream',
  'ScriptProcessorNode',
  'MediaStreamAudioSourceNode'
]