[package]
name = "video-chat"
version = "0.1.0"
authors = ["sakex <alexandre@senges.ch>"]
edition = "2018"
description = "WASM Video Chat"
repository = "https://github.com/sakex/asm-video-chat"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.37"
wasm-bindgen-futures = "0.4.10"
console_error_panic_hook = "0.1.6"
serde = "^1.0.59"
serde_derive = "^1.0.59"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'AudioBuffer',
  'AudioContext',
  'AudioDestinationNode',
  'AudioTrack',
  'AudioTrackList',
  'console',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlMediaElement',
  'HtmlVideoElement',
  'Navigator',
  'MediaDevices',
  'MediaStream',
  'MediaStreamAudioSourceNode',
  'MediaStreamConstraints',
  'MediaStreamTrack',
  'RtcConfiguration',
  'RtcIceCandidate',
  'RtcIceCandidateInit',
  'RtcOfferOptions',
  'RtcPeerConnection',
  'RtcRtpSender',
  'RtcSessionDescriptionInit',
  'ScriptProcessorNode',
  'VideoTrackList',
  'Window'
]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]